# docforge-mcp

./: .coverage  AGENTS.md  CHANGELOG.md  LICENSE  MEMORY.md  Readme.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  codeql.yml
docforge/: __init__.py  app.py  config.py  middleware.py  server.py  template_utils.py
docforge/docx/: __init__.py  base_docx_tool.py  conditional_templates.py  dynamic_docx_tools.py  helpers.py
docforge/docx/advanced/: __init__.py  features.py
docforge/edit/: __init__.py  docx_editor.py  pptx_editor.py
docforge/email/: __init__.py  base_email_tool.py  dynamic_email_tools.py
docforge/merge/: __init__.py
docforge/pdf/: __init__.py  base_pdf_tool.py
docforge/pptx/: __init__.py  base_pptx_tool.py  chart_utils.py  constants.py  helpers.py  image_utils.py  slide_builder.py
docforge/pptx/advanced/: __init__.py  features.py
docforge/read/: __init__.py  docx_reader.py  pdf_reader.py  pptx_reader.py  xlsx_reader.py
docforge/upload/: __init__.py  main.py  utils.py
docforge/upload/backends/: __init__.py  azure.py  local.py  minio.py  s3.py
docforge/xlsx/: __init__.py  base_xlsx_tool.py  formatting.py  helpers.py
docforge/xlsx/charts/: __init__.py  chart_builder.py
docforge/xml/: __init__.py  base_xml_tool.py
docs/: REFACTORING-PLAN.md
docx_tools/: base_docx_tool.py  dynamic_docx_tools.py  helpers.py
docx_tools/advanced/: __init__.py  features.py
edit_tools/: __init__.py  docx_editor.py
email_tools/: base_email_tool.py  dynamic_email_tools.py
mcp_office_documents/: server.py
merge_tools/: merger.py
pdf_tools/: __init__.py  base_pdf_tool.py
pptx_tools/: base_pptx_tool.py  chart_utils.py  slide_builder.py
pptx_tools/advanced/: __init__.py  features.py
read_tools/: __init__.py  docx_reader.py  pptx_reader.py  xlsx_reader.py
tests/: __init__.py  test_auth_middleware.py  test_conditional_templates.py  test_docx_advanced.py  test_docx_base.py  test_docx_templates.py  test_edit_tools.py  test_merge_tools.py  test_pdf_reader.py  test_pdf_tools.py  test_pptx_advanced.py  test_pptx_creation.py  test_read_tools.py  test_s3_upload.py  test_xlsx_charts.py  test_xlsx_creation.py  test_xlsx_formatting.py  test_xml_creation.py
upload_tools/: main.py
upload_tools/backends/: gcs.py
xlsx_tools/: base_xlsx_tool.py
xlsx_tools/charts/: chart_builder.py
