[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docforge-mcp"
version = "0.2.1"
description = "MCP server for complete Office document manipulation — create, read, edit, convert DOCX/XLSX/PPTX/PDF/EML"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Claudio Ferreira Filho", email = "filhocf@gmail.com" },
]
keywords = ["mcp", "office", "docx", "xlsx", "pptx", "pdf", "documents", "docforge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "python-pptx==1.0.2",
    "python-docx==1.2.0",
    "beautifulsoup4>=4.13.4",
    "openpyxl>=3.1.2",
    "fastmcp>=3.2.0",
    "pydantic>=2.11.5",
    "PyYAML",
    "pystache>=0.6.5",
    "requests>=2.31.0",
    "defusedxml>=0.7.1",
    "python-dotenv>=1.2.1",
    "fpdf2>=2.8.0",
    "pypdf>=5.0.0",
    "markdown>=3.5",
]

[project.optional-dependencies]
cloud = [
    "boto3>=1.40.1",
    "botocore>=1.40.1",
    "google-cloud-storage>=2.18.2",
    "azure-storage-blob>=12.23.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
docforge-mcp = "docforge.server:main"
mcp-ms-office-documents = "docforge.server:main"  # backward compat

[project.urls]
Homepage = "https://github.com/filhocf/docforge-mcp"
Repository = "https://github.com/filhocf/docforge-mcp"
Issues = "https://github.com/filhocf/docforge-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["docforge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 200
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "F841"]

